Adjust font size for mobile devices

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -26,9 +26,15 @@ article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
 	display: block;
 }
+
 body {
 	line-height: 1;
+  -moz-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  text-size-adjust: 100%;
 }
+
 ol, ul {
 	list-style: none;
 }
@@ -177,6 +183,22 @@ footer a:hover {
 * html .clearfix {height: 1%;}
 .clearfix {display: block;}
 
+
+/* #GIST styles
+================================================== */
+
+#container .gist-file {
+  font-size: .8em;
+}
+
+#container .line-numbers {
+  display: none;
+}
+
+#container .gist-meta {
+  display: none;
+}
+
 /* #Media Queries
 ================================================== */
 
@@ -192,13 +214,4 @@ footer a:hover {
     width: 94%;
     margin: 0 auto;
   }
-}
-
-#container .gist .file-data {
-  font-size: 10px;
-}
-
-
-#container .gist-meta {
-  display: none;
 }
